# sloflang

./: LICENSE  README.md
examples/: classes.slof  hello.slof  main.slof  variants.slof
stage1/: CMakeLists.txt  compiler.cpp  runcmake.sh  stream.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  types.h  utf8stream.cpp  utf8stream.h
stage1/unused/: utf8stream.cpp
